2009-04-20  higepon  <higepon@users.sourceforge.jp>

        * UtilityProcedures.cpp : Added (os-constant) procedure.

        * OSCompatSocket.h: Added.

2009-04-18  higepon  <higepon@users.sourceforge.jp>

        * COPYING: Added author of SRFI.

2009-04-17  higepon  <higepon@users.sourceforge.jp>

        * Makefile.am: Added FreeBSD.

2009-04-17 herumi <herumi@nifty.com>

        * OSCompat.cpp : correct handling of windows console and redirect. a little refactoring

        * OSCompat.cpp : add unicode version of getEnvAlist

        * OSCompat.cpp : add unicode version of isExist/isWritable/isReadable, other unicode version fuctions for win

2009-04-17 OKUMURA Yuki <mjt@cltn.org>

        * configure.ac: mingw specific flag/vars/definition (WINDRES, MINGW32).

        * README.MINGW: added.

2009-04-16  higepon  <higepon@users.sourceforge.jp>

        * configure.ac: LDFLAGS for FreeBSD.

        * OSCompat.cpp (scheme::getMoshExecutablePath): Fixed for FreeBSD.

        * PortProcedures.cpp : Added utf16ToUtf32()

2009-04-16 herumi <herumi@nifty.com>

        * ucs4string.cpp : fix ucs4string.split()

        * fix longjmp destroy stack

        * OSCompat.cpp : fix correct cosole handle for WriteConsole

        * OSCompat.cpp : add getCommandLine for windows

2009-04-16  higepon  <higepon@users.sourceforge.jp>

        * ErrorProcedures.h (TRY_WITHOUT_DSTR): Fixed.

        * PortProcedures.cpp (formatEx): Added TRY_WITHOUT_DSTR and CATCH.

2009-04-15 herumi <herumi@nifty.com>

        * windows installer script for innosetup

        * OSCompat.cpp : add getLastErrorMessage() for windows

2009-04-15  higepon  <higepon@users.sourceforge.jp>

        * OSCompat.h (scheme): Addes isLastErrorAcessError();

2009-04-14  higepon  <higepon@users.sourceforge.jp>

        * OSCompat.cpp : Added getCurrentDirectory() and setCurrentDirectory();

        * Removed stringError, use getLastErrorMessage();

2009-04-14 herumi <herumi@nifty.com>
