@@ -1,5 +1,7 @@
 2009-04-20  higepon  <higepon@users.sourceforge.jp>
 
+        * Object.h : Added accessors for Socket Object.
+
         * UtilityProcedures.cpp : Added (os-constant) procedure.
 
         * OSCompatSocket.h: Added.
